@@ -1,0 +1,1 @@
+debian/install/usr/lib/libpqxx-*.so*  usr/lib
